--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,12 @@
 .column{
   width:350px;
   float:left;
+  padding: 35px;
+  border:2px;
+  margin: 1px;
+  background-color: grey;
+}
+img{
+  padding: 20px;
+
 }
